src/test/resources/purescript_examples/passing/NestedWhere.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('f')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('x')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('g')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('x')
                PsiElement(whitespace)('\n  ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PureASTWrapperElement(ValueDeclaration)
          PsiElement(identifier)('g')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Binder)
            PureASTWrapperElement(VarBinder)
              PsiElement(identifier)('x')
              PsiElement(whitespace)(' ')
          PsiElement(=)('=')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Value)
            PureASTWrapperElement(PrefixValue)
              PureASTWrapperElement(Var)
                PureASTWrapperElement(Qualified)
                  PsiElement(identifier)('go')
                  PsiElement(whitespace)(' ')
              PureASTWrapperElement(Var)
                PureASTWrapperElement(Qualified)
                  PsiElement(identifier)('x')
                  PsiElement(whitespace)('\n    ')
          PsiElement(where)('where')
          PsiElement(whitespace)('\n    ')
          PureASTWrapperElement(ValueDeclaration)
            PsiElement(identifier)('go')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Binder)
              PureASTWrapperElement(VarBinder)
                PsiElement(identifier)('x')
                PsiElement(whitespace)(' ')
            PsiElement(=)('=')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Value)
              PureASTWrapperElement(PrefixValue)
                PureASTWrapperElement(Var)
                  PureASTWrapperElement(Qualified)
                    PsiElement(identifier)('go1')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(Parens)
                  PsiElement(()('(')
                  PureASTWrapperElement(Value)
                    PureASTWrapperElement(PrefixValue)
                      PureASTWrapperElement(Var)
                        PureASTWrapperElement(Qualified)
                          PsiElement(identifier)('x')
                          PsiElement(whitespace)(' ')
                    PureASTWrapperElement(IdentInfix)
                      PureASTWrapperElement(Qualified)
                        PsiElement(operator)('-')
                        PsiElement(whitespace)(' ')
                    PureASTWrapperElement(Value)
                      PureASTWrapperElement(PrefixValue)
                        PureASTWrapperElement(NumericLiteral)
                          PsiElement(natural)('1')
                  PsiElement())(')')
                  PsiElement(whitespace)('\n    ')
          PureASTWrapperElement(ValueDeclaration)
            PsiElement(identifier)('go1')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Binder)
              PureASTWrapperElement(VarBinder)
                PsiElement(identifier)('x')
                PsiElement(whitespace)(' ')
            PsiElement(=)('=')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Value)
              PureASTWrapperElement(PrefixValue)
                PureASTWrapperElement(Var)
                  PureASTWrapperElement(Qualified)
                    PsiElement(identifier)('go')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(Var)
                  PureASTWrapperElement(Qualified)
                    PsiElement(identifier)('x')
                    PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
