src/test/resources/purescript_examples/failing/UnderscoreModuleName.purs.psi
FILE
  PureASTWrapperElement(Program)
    PsiElement(module)('module')
    PsiElement(whitespace)(' ')
    PureASTWrapperElement(Qualified)
      PureASTWrapperElement(ModuleName)
        PsiElement(proper name)('Bad')
    PsiErrorElement:Expecting proper name, ., ( or where
      PsiElement(identifier)('_Module')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
  PsiErrorElement:Unexpected identifier. Expecting Module
    PsiElement(identifier)('main')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Debug')
    PsiElement(.)('.')
    PsiElement(proper name)('Trace')
    PsiElement(.)('.')
    PsiElement(identifier)('trace')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"Done"')
    PsiElement(whitespace)('\n')
